# flask-blueprints-loader

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: requirements.txt
docs/source/: api.rst  changes.rst  conf.py  index.rst  license.rst
src/flask_blueprints_loader/: __init__.py  blueprints_loader.py
tests/: conftest.py  test_blueprints_loader.py
